--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^5.0.3",
     "uuidv4": "^6.2.13",
